HHQ-1533 - fix for icons in navigation blua bkgd popping out of place in IE

--- a/web/css/iecss.css
+++ b/web/css/iecss.css
@@ -19,9 +19,9 @@
 }
 
 #loading {
-    bottom:0px;
+    margin-bottom:-1px;
 }
 
 #hb {
-    bottom:0px;   
+    margin-bottom:-1px;
 }
